fix: fixed banner msg spacing

--- a/src/pages/dashboard/Dashboard.module.scss
+++ b/src/pages/dashboard/Dashboard.module.scss
@@ -14,6 +14,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100vw;
     text-align: center;
     font-size: var(--low-mid-font-size);
     background-color: #eee;
